--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,6 @@
     Welcome to {{ title }}!
   </h1>
 </div>
-<h2 style="text-align: center;">請點擊報表連結</h2>
 <div>
   <ul>
     <li>
@@ -33,6 +32,9 @@
     </li>
     <li>
       <h2><a routerLink="reportTwelve">報表12</a></h2>
+    </li>
+    <li>
+      <h2><a routerLink="reportThirteen">報表13</a></h2>
     </li>
   </ul>
 </div>
