--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,9 @@
     <li>
       <h2><a routerLink="reportThirteen">報表13</a></h2>
     </li>
+    <li>
+      <h2><a routerLink="report14">報表14</a></h2>
+    </li>
   </ul>
 </div>
 <div style="size: A4;margin: 0 auto;width: 820px;margin-bottom: 50px;">
