--- a/src/app/report-eight/report-eight.component.html
+++ b/src/app/report-eight/report-eight.component.html
@@ -2,7 +2,7 @@
 <table
   style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <tbody>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;border-right: 0px;text-align: center;word-break: break-word;width: 15%;">
         追債費用＝
       </th>
@@ -25,7 +25,7 @@
         金額
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;border-right: 0px;text-align: center;word-break: break-word;width: 15%;">
         自留追債費用＝
       </th>
@@ -48,8 +48,8 @@
         金額
       </th>
     </tr>
-    <tr style="height: 3rem"></tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;"></tr>
+    <tr style="height: 3rem;">
       <th colspan="4" style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
         日期
       </th>
@@ -66,7 +66,7 @@
         備註
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
         日期
       </th>
@@ -95,7 +95,7 @@
         經辦單位
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
         V
       </td>
@@ -124,7 +124,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
 
       </td>
