--- a/src/app/report-nine/report-nine.component.html
+++ b/src/app/report-nine/report-nine.component.html
@@ -2,8 +2,8 @@
 <h3 style="text-align: center;">104年1-12月本行輸出保險賠款分析表(險別)</h3>
 <table
   style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
-  <thead>
-    <tr style="height: 3rem">
+  
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         出口商
       </th>
@@ -23,9 +23,9 @@
         百分比
       </th>
     </tr>
-  </thead>
+  
   <tbody>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         V
       </td>
@@ -45,7 +45,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         V
       </td>
@@ -62,7 +62,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         V
       </td>
@@ -82,7 +82,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         合計
       </th>
@@ -107,8 +107,8 @@
 <h3 style="text-align: center;">104年1-12月本行輸出保險賠款分析表(單位別)</h3>
 <table
   style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
-  <thead>
-    <tr style="height: 3rem">
+  <tbody>Í
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         出口商
       </th>
@@ -128,9 +128,7 @@
         百分比
       </th>
     </tr>
-  </thead>
-  <tbody>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         V
       </td>
@@ -150,7 +148,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         V
       </td>
@@ -167,7 +165,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         V
       </td>
@@ -187,7 +185,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         合計
       </th>
@@ -212,8 +210,8 @@
 <h3 style="text-align: center;">104年1-12月本行輸出保險賠款分析表(單位別)</h3>
 <table
   style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
-  <thead>
-    <tr style="height: 3rem">
+  
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         出口商
       </th>
@@ -230,9 +228,9 @@
         百分比
       </th>
     </tr>
-  </thead>
+  
   <tbody>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -249,7 +247,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -263,7 +261,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -280,7 +278,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         合計
       </th>
