--- a/src/app/report-seven/report-seven.component.html
+++ b/src/app/report-seven/report-seven.component.html
@@ -5,7 +5,7 @@
 <table
   style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <tbody>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         被保險人
       </th>
@@ -19,7 +19,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         險別
       </th>
@@ -33,7 +33,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         輸出地區
       </th>
@@ -47,7 +47,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         交易產品
       </th>
@@ -61,7 +61,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         國外買主/開狀銀行
       </th>
@@ -75,7 +75,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         被保險人信用配額或開狀銀行信用配額<br />(美元/新臺幣元)
       </th>
@@ -89,7 +89,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         賠付日期
       </th>
@@ -103,7 +103,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         賠付金額<br />(新臺幣元)
       </th>
@@ -117,7 +117,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         賠付原因
       </th>
@@ -131,7 +131,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         收回日期
       </th>
@@ -145,7 +145,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         收回款<br />(新臺幣元)
       </th>
@@ -159,7 +159,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         本行分得收回款金額<br />(新臺幣元)
       </th>
@@ -173,7 +173,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         簽單年度
       </th>
@@ -187,7 +187,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         再保險攤賠比率(%)
       </th>
@@ -201,7 +201,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         分配予再保險公司之金額<br />(新臺幣元)
       </th>
@@ -215,7 +215,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         自留理賠後收回款<br />(新臺幣元)
       </th>
@@ -229,7 +229,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         分配予582專案補助之金額<br />(新臺幣元)
       </th>
@@ -243,7 +243,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         追索情形
       </th>
