--- a/src/app/report-ten/report-ten.component.html
+++ b/src/app/report-ten/report-ten.component.html
@@ -9,7 +9,7 @@
 </h5>
 <table style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <tbody>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         承保單位別
       </th>
@@ -20,7 +20,7 @@
         百分比
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -31,7 +31,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -42,7 +42,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         合計
       </th>
@@ -53,9 +53,9 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         險別
       </th>
@@ -66,7 +66,7 @@
         百分比
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -77,7 +77,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -88,7 +88,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         合計
       </th>
@@ -99,9 +99,9 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         承保國家別
       </th>
@@ -112,7 +112,7 @@
         百分比
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -123,7 +123,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -134,7 +134,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         合計
       </th>
@@ -145,9 +145,9 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         交易貨品別
       </th>
@@ -158,7 +158,7 @@
         百分比
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -169,7 +169,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -180,7 +180,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         合計
       </th>
