--- a/src/app/report-thirteen/report-thirteen.component.html
+++ b/src/app/report-thirteen/report-thirteen.component.html
@@ -7,7 +7,7 @@
 </h5>
 <table style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <tbody>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 34%;">
         險別
       </th>
@@ -21,7 +21,7 @@
           自留業務
         </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 34%;">
         V
       </td>
