--- a/src/app/report-eleven/report-eleven.component.html
+++ b/src/app/report-eleven/report-eleven.component.html
@@ -7,7 +7,7 @@
 </h5>
 <table style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <tbody>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th rowspan="2" style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         104年度/月份
       </th>
@@ -18,7 +18,7 @@
         自留業務
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 20%;">
         損失率
       </th>
@@ -32,7 +32,7 @@
         淨損失率
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -84,7 +84,7 @@
 <p>註三：承保單位別損失率(每季出現)</p>
 <table style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <tbody>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 20%;">
         106年度/季
       </th>
@@ -101,7 +101,7 @@
         損失率
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 20%;">
         V
       </td>
@@ -118,7 +118,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 20%;">
 
       </td>
