--- a/src/app/report-four/report-four.component.html
+++ b/src/app/report-four/report-four.component.html
@@ -1,7 +1,7 @@
 <h3>104.12月新增逾期案件</h3>
 <table style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
-  <thead>
-    <tr style="height: 3rem">
+  
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
         被保險人
       </th>
@@ -24,9 +24,9 @@
         國別/產品
       </th>
     </tr>
-  </thead>
+  
   <tbody>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
         V
       </td>
@@ -49,7 +49,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
         V
       </td>
@@ -72,7 +72,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th colspan="3" style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
         合計/件數/金額
       </th>
@@ -86,7 +86,7 @@
         V
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th colspan="3" rowspan="2" style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
         V
       </th>
@@ -97,7 +97,7 @@
         V
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 9%;">
         自留可能賠款
       </th>
@@ -105,7 +105,7 @@
         V
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th colspan="3" style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
         新增582件數/金額/可能補助賠款
       </th>
@@ -116,7 +116,7 @@
         V
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th colspan="4" style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
         調整後本行可能自留賠款
       </th>
@@ -132,8 +132,8 @@
   幣別:新臺幣元
 </h5>
 <table style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
-  <thead>
-    <tr style="height: 3rem">
+  
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         國家別
       </th>
@@ -144,9 +144,9 @@
         逾期可能賠付金額
       </th>
     </tr>
-  </thead>
+  
   <tbody>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         V
       </td>
@@ -157,7 +157,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         V
       </td>
@@ -168,7 +168,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         合計
       </th>
@@ -179,7 +179,7 @@
         V
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         再保險可能攤賠金額
       </th>
@@ -190,7 +190,7 @@
         V
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         本行可能自留賠款
       </th>
@@ -201,7 +201,7 @@
         V
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         582專案可能自留賠款補助
       </th>
@@ -212,7 +212,7 @@
         V
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         調整後本行可能自留賠款
       </th>
@@ -231,8 +231,8 @@
   幣別:新臺幣元
 </h5>
 <table style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
-  <thead>
-    <tr style="height: 3rem">
+  
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         國家別
       </th>
@@ -243,9 +243,9 @@
         逾期可能賠付金額
       </th>
     </tr>
-  </thead>
+  
   <tbody>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         V
       </td>
@@ -256,7 +256,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         V
       </td>
@@ -267,7 +267,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         合計/件數/金額
       </td>
@@ -278,7 +278,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         再保險可能攤賠金額
       </th>
@@ -289,7 +289,7 @@
         V
       </th>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         本行可能自留賠款
       </th>
