--- a/src/app/report-twelve/report-twelve.component.html
+++ b/src/app/report-twelve/report-twelve.component.html
@@ -8,7 +8,7 @@
 <table
   style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <tbody>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%">
         本期整體業務保險賠款
       </th>
@@ -22,7 +22,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%">
         本期收回款
       </th>
@@ -36,7 +36,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%">
         本期追債費用
       </th>
@@ -50,7 +50,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%">
         本期提存之整體業務未決賠款準備
       </th>
@@ -64,7 +64,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%">
         上期提存之整體業務未決賠款準備
       </th>
@@ -78,7 +78,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%">
         滿期保費<br />(註一)
       </th>
@@ -92,7 +92,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%">
         整體業務損失率<br />(註三)
       </th>
@@ -106,7 +106,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 3rem">
+    <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%">
         整體業務淨損失率<br />(註五)
       </th>
