--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,37 +7,43 @@
 <div>
   <ul>
     <li>
-      <h2><a routerLink="reportFour">報表4</a></h2>
+      <h2><a routerLink="report4">報表4</a></h2>
     </li>
     <li>
-      <h2><a routerLink="reportFive">報表5</a></h2>
+      <h2><a routerLink="report5">報表5</a></h2>
     </li>
     <li>
-      <h2><a routerLink="reportSix">報表6</a></h2>
+      <h2><a routerLink="report6">報表6</a></h2>
     </li>
     <li>
-      <h2><a routerLink="reportSeven">報表7</a></h2>
+      <h2><a routerLink="report7">報表7</a></h2>
     </li>
     <li>
-      <h2><a routerLink="reportEight">報表8</a></h2>
+      <h2><a routerLink="report8">報表8</a></h2>
     </li>
     <li>
-      <h2><a routerLink="reportNine">報表9</a></h2>
+      <h2><a routerLink="report9">報表9</a></h2>
     </li>
     <li>
-      <h2><a routerLink="reportTen">報表10</a></h2>
+      <h2><a routerLink="report10">報表10</a></h2>
     </li>
     <li>
-      <h2><a routerLink="reportEleven">報表11</a></h2>
+      <h2><a routerLink="report11">報表11</a></h2>
     </li>
     <li>
-      <h2><a routerLink="reportTwelve">報表12</a></h2>
+      <h2><a routerLink="report12">報表12</a></h2>
     </li>
     <li>
-      <h2><a routerLink="reportThirteen">報表13</a></h2>
+      <h2><a routerLink="report13">報表13</a></h2>
     </li>
     <li>
       <h2><a routerLink="report14">報表14</a></h2>
+    </li>
+    <li>
+      <h2><a routerLink="report15">報表15</a></h2>
+    </li>
+    <li>
+      <h2><a routerLink="report15">報表16</a></h2>
     </li>
   </ul>
 </div>
