--- a/src/app/report16/report16.component.html
+++ b/src/app/report16/report16.component.html
@@ -1,161 +1,65 @@
-<h2 >6.理賠前收回明細表(月報)，賠款/款項已全部收回之逾期案件資料</h2>
+<h2>
+  16.三年比較圖(月報)，提供理收前收回款/逾期可能賠付金額/賠款之彙總資料，以及長條圖分析顯示
+</h2>
 <h3 style="text-align: center;">
-  104年12月輸出保險理賠前收回明細表
+  三年比較圖
 </h3>
-<table
-  style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
+<h5 style="text-align: right;margin-bottom: 5px;">（單位:新台幣/千元）</h5>
+<table style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <tbody>
     <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
-        被保險人
+
       </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
+        102年
       </td>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
+        103年
       </td>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
+        104年
+      </td>
+    </tr>
+    <tr style="height: 3rem;">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+        理賠前收回款
+      </th>
+      <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 26%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 26%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 26%;">
         V
       </td>
     </tr>
     <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
-        險別
+        逾期可能賠付金額
       </th>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
+      <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 26%;">
         V
       </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
+      <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 26%;">
         V
       </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
+      <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 26%;">
         V
       </td>
     </tr>
     <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
-        輸出貨價<br />（US$） 
+        賠款
       </th>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
+      <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 26%;">
         V
       </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
+      <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 26%;">
         V
       </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-    </tr>
-    <tr style="height: 3rem;">
-      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
-        輸出貨價
-      </th>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-    </tr>
-    <tr style="height: 3rem;">
-      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
-        輸出地區
-      </th>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-    </tr>
-    <tr style="height: 3rem;">
-      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
-        輸出產品
-      </th>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-    </tr>
-    <tr style="height: 3rem;">
-      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
-        收回日期
-      </th>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-    </tr>
-    <tr style="height: 3rem;">
-      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
-        信用保險金額<br />(新臺幣千元)
-      </th>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-    </tr>
-    <tr style="height: 3rem;">
-      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
-        未付原因
-      </th>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-    </tr>
-    <tr style="height: 3rem;">
-      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
-        經辦單位
-      </th>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-    </tr>
-    <tr style="height: 3rem;">
-      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
-        處理人員
-      </th>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
-        V
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
+      <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 26%;">
         V
       </td>
     </tr>
