--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.mat-tab-label .mat-tab-label-content {
+  width: 100%;
+  height: 100%;
+  a {
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    display: grid;
+    font-size: 16px;
+  }
+}
