--- a/src/app/report8/report8.component.html
+++ b/src/app/report8/report8.component.html
@@ -1,5 +1,5 @@
 <h2>8.追債費用表(月報)</h2>
-<table style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
+<table style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: auto;width: 100%;">
   <tbody>
     <tr style="height: 3rem;">
       <th style="border: 1px solid black;border-right: 0px;text-align: center;word-break: break-word;width: 15%;">
@@ -47,23 +47,25 @@
         金額
       </th>
     </tr>
-    <tr style="height: 3rem;"></tr>
     <tr style="height: 3rem;">
-      <th colspan="4" style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
-        日期
+    </tr>
+    <tr style="height: 3rem;">
+      <th colspan="4" style="border: 1px solid black;text-align: center;word-break: break-word;width: 37%;">
+        追債費用支出
       </th>
       <th style="border: 1px solid black;text-align: right;word-break: break-word;width: 2%;">
 
       </th>
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
-        金額
+        再保分攤
       </th>
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
-        金額
+        本行分攤
       </th>
-      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
-        備註
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 31%;">
+
       </th>
+      
     </tr>
     <tr style="height: 3rem;">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
@@ -87,7 +89,7 @@
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
         金額
       </th>
-      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 31%;">
         備註
       </th>
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
@@ -116,7 +118,7 @@
       <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 10%;">
         V
       </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 31%;">
         VVVVVVV VVVVVVVVVVVV VVVVVVVVVV VVVVVVVVVVVVVVV
       </td>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
@@ -145,7 +147,7 @@
       <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 10%;">
 
       </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 31%;">
 
       </td>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
